# qyv

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
service/: README.md  pyproject.toml  run_pycodestyle.py  start.py
service/src/app/: app.py
service/src/helpers/: milvus_client.py
service/src/pipelines/: detect_objects_from_frames.py  extract_audio_and_transcribe_video.py  extract_features_from_frames.py  extract_frames_from_video.py  handle_video_file.py  ingest_to_milvus.py
ui/: README.md  eslint.config.mjs  nodemon.json  package-lock.json  package.json  start.js
ui/client/admin_module/: index.html  vite.config.mjs
ui/client/user_module/: index.html  vite.config.mjs
ui/client/user_module/src/js/: app.js
ui/server/: app.js
