[tool.poetry]
name = "qyv_service"
version = "0.1.0"
description = ""
authors = ["Daniel Abrao <danielpaladar@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
moviepy = "^1.0.3"
speechrecognition = "^3.10.4"
pydub = "^0.25.1"
librosa = "^0.10.2.post1"
scikit-learn = "^1.5.0"
joblib = "^1.4.2"
numpy = "<2.0"
matplotlib = "^3.9.0"
gtts = "^2.5.1"
transformers = "^4.42.3"
torch = "^2.3.1"
torchvision = "^0.18.1"
[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.12.0"

autopep8 = "^2.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "start:main"
lint = "run_pycodestyle:main"
